--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,4 +1,4 @@
-.place__paragraph_text {
+.place__text {
     margin: 0;
     font-family: 'Inter';
     font-style: normal;
@@ -8,13 +8,13 @@
   }
 
 @media screen and (max-width: 768px) {
-  .place__paragraph_text {
+  .place__text {
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .place__paragraph_text {
+  .place__text {
     font-size: 16px;
   }
 }
