--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,4 @@
-.place__website_url-heading {
+.place__url-heading {
   margin: 0 0 12px;
   font-family: 'Inter';
   font-style: normal;
@@ -9,13 +9,13 @@
   }
 
   @media screen and (max-width: 768px) {
-    .place__website_url-heading {
+    .place__url-heading {
       line-height: 12px;
     }
   } 
 
   @media screen and (max-width: 320px) {
-    .place__website_url-heading {
+    .place__url-heading {
       line-height: 12px;
     }
   } 
