--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,22 +1,26 @@
 .cover__link {
-    background-image: url(../../../images/cover-trains.jpg);
-    background-size: cover;
-    text-decoration: none;
-    color: #FFFFFF;
-    position: relative;
-  }
-  
-  .cover__link::before {
-    background-color: #2A2C2F;
-    top: 0;
-    left: 0;
-    opacity: 0.3;
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-  }
-  
-  .cover__link:hover::before {
-    opacity: 0.9;
-  }
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  text-decoration: none;
+  color: #FFFFFF;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cover__link::before {
+  background-color: #2A2C2F;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.cover__link:hover::before {
+  opacity: 0.9;
+}
