--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,35 +1,34 @@
 .cover__subtitle {
-    margin: 0 412px 245px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
+  margin: 0 412px 245px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  max-width: 360px;
+  position: relative;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__subtitle {
     max-width: 360px;
-    position: relative;
+    margin: 0 0 195px;
   }
+}
 
-  @media screen and (max-width: 1024px) {
-    .cover__subtitle {
-      width: 360px;
-      margin: 0 332px 195px;
-    }
-  } 
+@media screen and (max-width: 768px) {
+  .cover__subtitle {
+    margin: 0 0 115px;
+  }
+}
 
-  @media screen and (max-width: 768px) {
-    .cover__subtitle {
-      width: 360px;
-      margin: 0 204px 115px;
-    }
-  } 
-
-  @media screen and (max-width: 320px) {
-    .cover__subtitle {
-      max-width: 288px;
-      margin: 0 16px 33px;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 16px;
-    }
-  } 
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    max-width: 288px;
+    margin: 0 0 33px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
