--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,32 +1,29 @@
 .cover {
-    display: flex;
-    max-width: 1184px;
-    max-height: 740px;
-    margin: 92px 48px;
-    flex-direction: column;
-    position: relative;
+  display: flex;
+  max-width: 1184px;
+  margin: 92px 48px;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    max-width: 1024px;
+    margin: 92px 0;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .cover {
-      max-width: 1024px;
-      max-height: 640px;
-      margin: 92px 0;
-    }
-  } 
+}
 
-  @media screen and (max-width: 768px) {
-    .cover {
-      max-width: 768px;
-      max-height: 480px;
-      margin: 92px 0;
-    }
-  } 
+@media screen and (max-width: 768px) {
+  .cover {
+    max-width: 768px;
+    margin: 92px 0;
+  }
+}
 
-  @media screen and (max-width: 320px) {
-    .cover {
-      max-width: 320px;
-      max-height: 200px;
-      margin: 64px 0 66px 0;
-    }
-  } 
+@media screen and (max-width: 320px) {
+  .cover {
+    max-width: 320px;
+    margin: 64px 0 66px 0;
+  }
+}
