--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,11 +1,12 @@
 .header__lang-link {
 	color: #FFFFFF;
-  	text-decoration: none;
+	text-decoration: none;
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 24px;
 	line-height: 28px;
+	align-self: flex-end;
 }
 
 @media screen and (max-width: 320px) {
@@ -13,4 +14,4 @@
 		font-size: 18px;
 		line-height: 20px;
 	}
-	}
+}
