--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,30 +1,25 @@
 .lead__subtitle {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
-    margin: 32px 172px 64px;
-    text-align: center;
-    max-width: 640px;
-  }
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  margin: 32px 0 64px;
+  text-align: center;
+  max-width: 640px;
+}
 
-  @media screen and (max-width: 1024px) {
-    .lead__subtitle {
-      margin: 32px 144px 56px;
-    }
-  } 
-
-  @media screen and (max-width: 768px) {
-    .lead__subtitle {
-      margin: 32px 64px 56px;
-    }
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 32px 0 56px;
   }
+}
 
-  @media screen and (max-width: 320px) {
-    .lead__subtitle {
-      margin: 0px 16px 40px;
-      font-size: 16px;
-      line-height: 20px;
-    }
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    margin: 16px 0 40px;
+    font-size: 16px;
+    line-height: 20px;
   }
+}
