--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,31 +1,19 @@
 .lead__title {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
-    margin: 0 132px;
-    max-width: 720px;
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .lead__title {
-      margin: 0 104px;
-      max-width: 720px;
-    }
-  } 
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 100px;
+  text-align: center;
+  margin: 0;
+  max-width: 720px;
+}
 
-  @media screen and (max-width: 768px) {
-    .lead__title {
-      margin: 0 24px;
-    }
+
+@media screen and (min-width: 320px) and (max-width: 670px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 44px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .lead__title {
-      margin: 0 16px 16px;
-      font-size: 40px;
-      line-height: 44px;
-    }
-  }
+}
