--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,29 +1,30 @@
 .lead {
-    color: #FFFFFF;
-    display: flex;
-    max-width: 984px;
-    flex-direction: column;
-    margin: 0 148px;
-    justify-content: center;
-  }
+  color: #FFFFFF;
+  display: flex;
+  max-width: 984px;
+  flex-direction: column;
+  margin: 0 148px;
+  justify-content: center;
+  align-items: center;
+}
 
-  @media screen and (max-width: 1024px) {
-    .lead {
-      max-width: 928px;
-      margin: 0 48px;
-    }
+@media screen and (max-width: 1024px) {
+  .lead {
+    max-width: 928px;
+    margin: 0 48px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .lead {
-      max-width: 768px;
-      margin: 0;
-    }
-  }
+}
 
-  @media screen and (max-width: 320px) {
-    .lead {
-      max-width: 320px;
-      margin: 48px 0 0;
-    }
+@media screen and (max-width: 768px) {
+  .lead {
+    max-width: 768px;
+    margin: 0;
   }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    max-width: 320px;
+    margin: 48px 0 0;
+  }
+}
