--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,24 +1,23 @@
 .page {
-    font-family: 'Inter';
-    max-width: 1280px;
-    background-color: #2A2C2F;
-    margin: 0 auto;
-  }
-  
+  font-family: 'Inter', 'Arial', 'sans-serif';
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
 @media screen and (max-width: 1024px) {
   .page {
-      max-width: 1024px;  
-    }
-  } 
+    max-width: 1024px;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .page {
-      max-width: 768px;  
-    }
-  } 
+    max-width: 768px;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .page {
-    max-width: 320px; 
-    }
-  } 
+    max-width: 320px;
+  }
+}
