--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,23 +1,10 @@
 .place__image {
-    width: 460px;
-    grid-row: 2/3;
-  }
+  width: 100%;
+  grid-row: 2/3;
+}
 
-  @media screen and (max-width: 1024px) {
-    .place__image {
-      max-width: 440px;
-    }
+@media screen and (min-width: 320px) and (max-width: 670px) {
+  .place__image {
+    grid-area: image;
   }
-
-  @media screen and (max-width: 768px) {
-    .place__image {
-      max-width: 340px;
-    }
-  }
-
-  @media screen and (max-width: 320px) {
-    .place__image {
-      max-width: 320px;
-      grid-area: image;
-    }
-  }
+}
