--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,35 +1,35 @@
 .place__title {
-    display: flex;
-    align-items: flex-end;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    margin: 0;
-    max-width: 460px;
-  }
+  display: flex;
+  align-items: flex-end;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  margin: 0;
+  max-width: 460px;
+}
 
-  @media screen and (max-width: 1024px) {
-    .place__title {
-      max-width: 440px;
-    }
+@media screen and (max-width: 1024px) {
+  .place__title {
+    max-width: 440px;
   }
+}
 
-  @media screen and (max-width: 768px) {
-    .place__title {
-      max-width: 340px;
-      font-size: 42px;
-      line-height: 46px;
-    }
+@media screen and (max-width: 768px) {
+  .place__title {
+    max-width: 340px;
+    font-size: 42px;
+    line-height: 46px;
   }
+}
 
-  @media screen and (max-width: 320px) {
-    .place__title {
-      max-width: 288px;
-      font-size: 32px;
-      line-height: 35px;
-      margin: 0 16px;
-      grid-area: title;
-    }
+@media screen and (min-width: 320px) and (max-width: 670px) {
+  .place__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 16px;
+    grid-area: title;
   }
+}
