--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -6,16 +6,12 @@
   font-size: 12px;
   line-height: 1.7;
   letter-spacing: 2px;
+  color: #AAAAAA;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .place__url-heading {
+    line-height: 12px;
   }
-
-  @media screen and (max-width: 768px) {
-    .place__url-heading {
-      line-height: 12px;
-    }
-  } 
-
-  @media screen and (max-width: 320px) {
-    .place__url-heading {
-      line-height: 12px;
-    }
-  } 
+}
