--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,4 @@
 .place {
-  max-height: 660px;
   max-width: 984px;
   display: grid;
   grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
@@ -17,36 +16,26 @@
     gap: 48px 32px;
     max-width: 928px;
   }
-} 
+}
 
 
 @media screen and (max-width: 768px) {
   .place {
-    gap: 48px 32px;
     max-width: 720px;
-    max-height: 581px;
   }
-} 
+}
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 670px) {
   .place {
     gap: 32px;
     max-width: 320px;
-    max-height: 1016px;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, minmax(min-content, max-content));
-    margin-top: 50px;
+    margin: 50px auto 0;
     grid-template-areas:
-    "title"
-    "place__website"
-    "image"
-    "place__paragraph";
+      "title"
+      "place__website"
+      "image"
+      "place__paragraph";
   }
-} 
-
-@media screen and (max-width: 320px) {
-  .place:first-of-type {
-    margin-top: 0;
-  }
-  }
+}
