--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -8,12 +8,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-position: center;
+  min-height: 740px;
+  min-width: 1184px;
 }
 
-.cover__link::before {
+.cover__link:before {
   background-color: #2A2C2F;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   opacity: 0.3;
   content: "";
   width: 100%;
@@ -22,5 +27,26 @@
 }
 
 .cover__link:hover::before {
-  opacity: 0.9;
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__link {
+    min-width: 1024px;
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__link {
+    min-height: 480px;
+    min-width: 768px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .cover__link {
+    min-height: 200px;
+    min-width: 320px;
+  }
 }
