--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,4 @@
 .cover__subtitle {
-  margin: 0 412px 245px;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -8,27 +6,14 @@
   text-align: center;
   max-width: 360px;
   position: relative;
+  margin: 32px 0 0 0;
 }
 
-@media screen and (max-width: 1024px) {
-  .cover__subtitle {
-    max-width: 360px;
-    margin: 0 0 195px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__subtitle {
-    margin: 0 0 115px;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .cover__subtitle {
     max-width: 288px;
-    margin: 0 0 33px;
-    font-weight: 400;
     font-size: 14px;
     line-height: 16px;
+    margin: 16px 0 0 0;
   }
 }
