--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,4 @@
 .cover__title {
-  margin: 245px 0 32px;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -9,24 +7,12 @@
   max-width: 560px;
   z-index: 2;
   position: relative;
+  margin: 0;
 }
 
-@media screen and (max-width: 1024px) {
-  .cover__title {
-    margin: 195px 0 32px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__title {
-    margin: 115px 0 32px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 670px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .cover__title {
     max-width: 288px;
-    margin: 33px 0 16px;
     font-size: 32px;
     line-height: 35px;
   }
