--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,22 +1,15 @@
 .footer__link {
   color: #FFFFFF;
   text-decoration: none;
-  padding-right: 18px;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
 }
 
-.footer__link:last-of-type {
-  padding-right: 0;
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__link {
     font-size: 24px;
     line-height: 24px;
-    padding-right: 0;
   }
 }
