--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,14 @@
-@media screen and (max-width: 320px) {
+.footer__links {
+  display: flex;
+  column-gap: 18px;
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__links {
     display: flex;
     flex-direction: column;
     row-gap: 32px;
+    column-gap: 0;
   }
 }
