--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -16,16 +16,14 @@
 @media screen and (max-width: 768px) {
   .footer {
     max-width: 720px;
-    margin: 0 24px;
-    padding-bottom: 24px;
+    margin: 88px 24px 0;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
     max-width: 186px;
-    margin: 0 118px 0 16px;
-    padding-bottom: 24px;
+    margin: 0 0 0 16px;
     flex-direction: column;
     row-gap: 48px;
   }
