--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,6 @@
 .header__lang-link {
 	color: #FFFFFF;
 	text-decoration: none;
-	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 24px;
@@ -9,7 +8,7 @@
 	align-self: flex-end;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
 	.header__lang-link {
 		font-size: 18px;
 		line-height: 20px;
