--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -19,7 +19,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     max-width: 288px;
     padding: 16px 16px 0 16px;
