--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -20,7 +20,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .intro {
     max-width: 288px;
     margin: 64px 16px;
