--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,4 @@
 .lead__caption {
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -15,7 +14,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .lead__caption {
     padding-left: 16px;
   }
