--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -22,7 +22,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .lead {
     max-width: 320px;
     margin: 48px 0 0;
