--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: 'Inter', 'Arial', 'sans-serif';
+  font-family: 'Inter', Arial, sans-serif;
   max-width: 1280px;
   margin: 0 auto;
 }
@@ -16,7 +16,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .page {
     max-width: 320px;
   }
