--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -13,13 +13,11 @@
     grid-template-columns: repeat(3, minmax(min-content, max-content));
     grid-template-rows: repeat(4, minmax(min-content, max-content));
     gap: 14px 14px;
-    margin: 0 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    max-width: 928px;
     grid-template-columns: repeat(2, minmax(min-content, max-content));
     grid-template-rows: repeat(4, minmax(min-content, max-content));
     gap: 16px 16px;
@@ -27,7 +25,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .photo-grid {
     max-width: 288px;
     grid-template-columns: 288px;
