--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,5 @@
 .place__url-heading {
-  margin: 0 0 12px;
-  font-family: 'Inter';
+  margin: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
