--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,14 +5,9 @@
   grid-column: 2;
   margin: 0;
   max-width: 456px;
+  row-gap: 12px;
 }
 
-@media screen and (max-width: 1024px) {
-  .place__website {
-    max-width: 456px;
-
-  }
-}
 
 @media screen and (max-width: 768px) {
   .place__website {
@@ -21,7 +16,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 670px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .place__website {
     max-width: 288px;
     margin: 0 16px;
