--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,10 @@
 .place {
   max-width: 984px;
   display: grid;
-  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
-  grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
+  grid-template-columns: 460px 1fr;
   gap: 48px 40px;
   margin-top: 80px;
+
 }
 
 .place:first-of-type {
@@ -13,24 +13,26 @@
 
 @media screen and (max-width: 1024px) {
   .place {
+    grid-template-columns: 440px 1fr;
     gap: 48px 32px;
     max-width: 928px;
   }
 }
 
-
 @media screen and (max-width: 768px) {
   .place {
+    gap: 48px 28px;
+    grid-template-columns: 340px 1fr;
     max-width: 720px;
+    margin-top: 73px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 670px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .place {
     gap: 32px;
     max-width: 320px;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, minmax(min-content, max-content));
+    grid-template-columns: 320px;
     margin: 50px auto 0;
     grid-template-areas:
       "title"
