--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .places {
     max-width: 320px;
     margin: 64px 0 0 0;
