--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -30,7 +30,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .place {
-    gap: 32px;
+    row-gap: 32px;
     max-width: 320px;
     grid-template-columns: 320px;
     margin: 50px auto 0;
