--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -19,10 +19,10 @@
   }
 }
 
-@media screen and (min-width: 319px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .place__paragraph {
     max-width: 288px;
-    margin: 0 16px;
     grid-area: place__paragraph;
+    margin: 0 16px 0;
   }
 }
