--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,12 +5,12 @@
 	font-weight: 400;
 	font-size: 24px;
 	line-height: 28px;
-	align-self: flex-end;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
 	.header__lang-link {
 		font-size: 18px;
 		line-height: 20px;
+		padding-bottom: 5px;
 	}
 }
