--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -17,5 +17,6 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .lead__caption {
     padding-left: 16px;
+    margin: 6px 0 0 0;
   }
 }
