--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,12 +11,14 @@
 @media screen and (max-width: 1024px) {
   .lead__subtitle {
     margin: 32px 0 56px;
+    max-width: 640px;
   }
 }
 
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .lead__subtitle {
+    max-width: 288px;
     margin: 16px 0 40px;
     font-size: 16px;
     line-height: 20px;
