--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,8 @@
   font-family: 'Inter', Arial, sans-serif;
   max-width: 1280px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 1024px) {
@@ -13,11 +15,12 @@
 @media screen and (max-width: 768px) {
   .page {
     max-width: 768px;
+    align-items: center;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .page {
-    max-width: 320px;
+    min-width: 320px;
   }
 }
