--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -15,16 +15,17 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    max-width: 720px;
+    min-width: 720px;
     margin: 88px 24px 0;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
-    max-width: 186px;
-    margin: 0 0 0 16px;
+    min-width: 186px;
+    padding: 0 118px 24px 16px;
     flex-direction: column;
     row-gap: 48px;
+    margin:0;
   }
 }
