--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,14 +14,14 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    max-width: 720px;
+    min-width: 720px;
     padding: 28px 24px 48px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
-    max-width: 288px;
+    min-width: 288px;
     padding: 16px 16px 0 16px;
     align-items: center;
   }
