--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -22,6 +22,6 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .intro {
     max-width: 288px;
-    margin: 64px 16px;
+    margin: 64px 16px 61px;
   }
 }
