--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,7 @@
 .place__image {
   width: 100%;
   grid-row: 2/3;
+  object-fit: contain;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
