--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,7 +14,9 @@
 
 @media screen and (max-width: 768px) {
   .header {
+    padding: 28px 0 48px;
     min-width: 720px;
+    box-sizing: border-box;
   }
 }
 
