--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -15,6 +15,7 @@
 @media screen and (max-width: 768px) {
   .page {
     max-width: 768px;
+    justify-content: center;
     align-items: center;
   }
 }
