--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -9,6 +9,13 @@
 @media screen and (max-width: 768px) {
   .place__text {
     font-size: 16px;
+    max-width: 352px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .place__text {
+    font-size: 16px;
     max-width: 288px;
   }
 }
