--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -31,7 +31,7 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .place {
     row-gap: 32px;
-    max-width: 320px;
+    min-width: 320px;
     grid-template-columns: 320px;
     margin: 50px auto 0;
     grid-template-areas:
