--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -23,7 +23,7 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     min-width: 288px;
-    padding: 16px 16px 0 16px;
+    padding: 16px 0 0;
     align-items: center;
   }
 }
