--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -15,9 +15,9 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover {
-    max-width: 768px;
+    min-width: 768px;
     margin: 0;
   }
 }
