--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -37,7 +37,7 @@
   }
 }
 
-F @media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover__link {
     min-height: 480px;
     min-width: 768px;
