--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
     max-width: 1024px;
     margin: 92px 0;
