--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,19 @@
 .footer {
   margin: 92px 48px 0px;
   padding-bottom: 24px;
-  max-width: 1184px;
+  min-width: 1184px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .footer {
-    max-width: 928px;
+    min-width: 928px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .footer {
     min-width: 720px;
     margin: 88px 24px 0;
