--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,18 @@
 .header {
-  max-width: 1184px;
+  min-width: 1184px;
   padding: 28px 48px 56px;
   display: flex;
   justify-content: space-between;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .header {
-    max-width: 928px;
+    min-width: 928px;
     padding: 28px 48px 48px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .header {
     padding: 28px 0 48px;
     min-width: 720px;
@@ -23,7 +23,7 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     min-width: 288px;
-    padding: 16px 0 0;
+    padding: 16px 16px 0;
     align-items: center;
   }
 }
