--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,13 +6,13 @@
   max-width: 690px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .intro {
     margin: 92px 0 92px 48px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro {
     max-width: 720px;
     margin: 88px 24px;
