--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,14 +8,14 @@
   align-items: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .lead {
     max-width: 928px;
     margin: 0 48px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .lead {
     max-width: 768px;
     margin: 0;
