--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,18 +5,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .page {
     max-width: 1024px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .page {
     max-width: 768px;
-    align-items: center;
   }
 }
 
