--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,7 +7,7 @@
   gap: 16px 16px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .photo-grid {
     max-width: 928px;
     grid-template-columns: repeat(3, minmax(min-content, max-content));
@@ -16,7 +16,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .photo-grid {
     grid-template-columns: repeat(2, minmax(min-content, max-content));
     grid-template-rows: repeat(4, minmax(min-content, max-content));
