--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -6,7 +6,7 @@
   line-height: 1.63;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__text {
     font-size: 16px;
     max-width: 352px;
