--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -9,7 +9,7 @@
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__website {
     max-width: 352px;
 
