--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,7 +11,7 @@
   margin-top: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .place {
     grid-template-columns: 440px 1fr;
     gap: 48px 32px;
@@ -19,7 +19,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place {
     gap: 48px 28px;
     grid-template-columns: 340px 1fr;
