--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,14 +4,14 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places {
     max-width: 928px;
     margin: 92px 48px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .places {
     max-width: 720px;
     margin: 88px 24px;
