--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -10,7 +10,7 @@
   align-items: center;
   background-position: center;
   min-height: 740px;
-  min-width: 1184px;
+  width: 100%;
 }
 
 .cover__link:before {
@@ -30,23 +30,21 @@
   opacity: 0.8;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .cover__link {
-    min-width: 1024px;
     min-height: 640px;
+
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .cover__link {
     min-height: 480px;
-    min-width: 768px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .cover__link {
     min-height: 200px;
-    min-width: 320px;
   }
 }
