--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,8 +3,7 @@
   column-gap: 18px;
 }
 
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .footer__links {
     flex-direction: column;
     row-gap: 32px;
