--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 92px 48px 0px;
+  margin: 92px auto 0px;
   padding-bottom: 24px;
   min-width: 1184px;
   display: flex;
@@ -7,20 +7,21 @@
   justify-content: space-between;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .footer {
     min-width: 928px;
+    margin: 0 auto;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .footer {
     min-width: 720px;
-    margin: 88px 24px 0;
+    margin: 88px auto 0;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .footer {
     min-width: 186px;
     padding: 0 118px 24px 16px;
