--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,20 @@
 .header {
   min-width: 1184px;
-  padding: 28px 48px 56px;
+  padding: 28px 0 0;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto 56px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .header {
     min-width: 928px;
-    padding: 28px 48px 48px;
+    margin: 0 auto;
+    padding: 28px 0 48px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .header {
     padding: 28px 0 48px;
     min-width: 720px;
@@ -20,10 +22,12 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .header {
     min-width: 288px;
-    padding: 16px 16px 0;
+    padding: 16px 0 0;
     align-items: center;
+    margin: 0 auto;
+    box-sizing: content-box;
   }
 }
