--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,22 +6,22 @@
   max-width: 690px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .intro {
     margin: 92px 0 92px 48px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .intro {
     max-width: 720px;
     margin: 88px 24px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .intro {
     max-width: 288px;
-    margin: 64px 16px 61px;
+    margin: 64px auto 61px;
   }
 }
