--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,7 +8,7 @@
   max-width: 640px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .lead__subtitle {
     margin: 32px 0 56px;
     max-width: 640px;
@@ -16,7 +16,7 @@
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
     max-width: 288px;
     margin: 16px 0 40px;
