--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,26 +3,25 @@
   display: flex;
   max-width: 984px;
   flex-direction: column;
-  margin: 0 148px;
+  margin: 0 auto;
   justify-content: center;
   align-items: center;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .lead {
     max-width: 928px;
-    margin: 0 48px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .lead {
     max-width: 768px;
     margin: 0;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .lead {
     max-width: 320px;
     margin: 48px 0 0;
