--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,27 +1,26 @@
 .page {
   font-family: 'Inter', Arial, sans-serif;
   max-width: 1280px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  margin: 0 auto;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .page {
     max-width: 1024px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .page {
     max-width: 768px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .page {
-    min-width: 320px;
+    max-width: 320px;
   }
 }
