--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,13 @@
 .photo-grid {
   max-width: 1184px;
   display: grid;
-  margin: 0 48px;
+  margin: 0 auto;
   grid-template-columns: repeat(4, minmax(min-content, max-content));
   grid-template-rows: repeat(3, minmax(min-content, max-content));
   gap: 16px 16px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .photo-grid {
     max-width: 928px;
     grid-template-columns: repeat(3, minmax(min-content, max-content));
@@ -16,21 +16,21 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .photo-grid {
     grid-template-columns: repeat(2, minmax(min-content, max-content));
     grid-template-rows: repeat(4, minmax(min-content, max-content));
     gap: 16px 16px;
-    margin: 0 24px;
+    padding: 0 24px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .photo-grid {
     max-width: 288px;
     grid-template-columns: 288px;
     grid-template-rows: repeat(12, minmax(min-content, max-content));
     gap: 12px 0;
-    margin: 0 16px;
+    padding: 0 16px;
   }
 }
