--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,23 +6,23 @@
   margin: 0;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .place__paragraph {
     max-width: 456px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .place__paragraph {
-    min-width: 352px;
+    max-width: 352px;
     row-gap: 25px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .place__paragraph {
-    min-width: 288px;
+    max-width: 288px;
     grid-area: place__paragraph;
-    margin: 0 16px 0;
+    padding: 0 16px 0;
   }
 }
