--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -6,14 +6,14 @@
   line-height: 1.63;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .place__text {
     font-size: 16px;
     max-width: 352px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .place__text {
     font-size: 16px;
     max-width: 288px;
