--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,13 +9,13 @@
   max-width: 460px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .place__title {
     max-width: 440px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .place__title {
     max-width: 330px;
     font-size: 42px;
@@ -23,12 +23,12 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .place__title {
     max-width: 288px;
     font-size: 32px;
     line-height: 35px;
-    margin: 0 16px;
+    padding: 0 16px;
     grid-area: title;
   }
 }
