--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -9,17 +9,17 @@
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .place__website {
     max-width: 352px;
 
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .place__website {
     max-width: 288px;
-    margin: 0 16px;
+    padding: 0 16px;
     grid-area: place__website;
   }
 }
