--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -19,7 +19,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .place {
     gap: 48px 28px;
     grid-template-columns: 340px 1fr;
@@ -28,7 +28,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .place {
     row-gap: 32px;
     min-width: 320px;
